# stattrack

./: Cargo.toml  build.rs  flake.nix
src/: command.rs  main.rs  projects.rs
src/app/: cli.rs  gui.rs  mod.rs
