[package]
name = "stattrack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ctrlc-async = "3.2.2"
notify-rust = "4.11.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[build-dependencies]
clap = "4.5.40"
clap_complete = "4.5.54"
